added a function to sort items into their tables app bins

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,6 +147,10 @@
 
     <string name = "billing_status">billing_status</string>
 
+    <string name = "checked">checked</string>
+
+    <string name = "tag_line_item">tagged_line_item</string>
+
 
 
 
