--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name = "green">Green</string>
     <string name = "red">Red</string>
 
-    <string name = "color_pref_screen_summary">Choose colors to quickly identify order types and origins</string>
+    <string name = "color_pref_screen_summary">Choose colors to quickly identify types of items, order types, and order origins</string>
 
     <string name = "color_cat_title">Display Colors</string>
 
@@ -208,5 +208,8 @@
     <string name = "done">Done</string>
 
     <string name = "play_sound">play_sound</string>
+
+    <string name = "advanced_tier_id">V8WZJX9RT4VMW</string>
+    <string name = "tier_id_key">tier_id_key</string>
 
 </resources>
