fixed bug caused by order id being null

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,6 @@
     <string name = "advanced_tier_id">V8WZJX9RT4VMW</string>
     <string name = "tier_id_key">tier_id_key</string>
 
+    <string name = "no_device_string">no_device_string</string>
+
 </resources>
